<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    style="@style/CustomAlertDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

   	<LinearLayout
   		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/largeMargin"
   		>
   	    <TextView
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:text="@string/dialog_bgt_name"
   	        />
   	    <EditText
   	        android:id="@+id/bgtDialogETbgtName"
   	        android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
 			android:gravity="center"
 			android:singleLine="true"
 			/> 
 		<LinearLayout
	        android:id="@+id/bgtDialogLLlimit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
			android:orientation="horizontal"        
	        >
	      	<TextView
	        	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="start"
	    		android:text="@string/dialog_bgt_limit"
	        	/>
	        <TextView 
	            android:id="@+id/bgtDialogTVcurSymbol"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginStart="@dimen/largeMargin"
	            />
		    <EditText
		        android:id="@+id/bgtDialogETlimit"
		        android:layout_width="fill_parent"  
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		        android:inputType="numberDecimal"
		        android:maxLength="12"
		    	android:singleLine="true"
		        />
	    	</LinearLayout>
	    	
 		<LinearLayout
	        android:id="@+id/bgtDialogLLAmountSpent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
			android:orientation="horizontal"        
	        >
	      	<TextView
	        	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="start"
	    		android:text="@string/dialog_bgt_amount_spent"
	        	/>
	        <TextView 
	            android:id="@+id/bgtDialogTVcurSymbolSpent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginStart="@dimen/largeMargin"
	            />
		    <EditText
		        android:id="@+id/bgtDialogETamountSpent"
		        android:layout_width="fill_parent"  
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		        android:inputType="numberDecimal"
		        android:maxLength="12"
		    	android:singleLine="true"
		        />
	    	</LinearLayout>


        <LinearLayout
            android:id="@+id/bgtDialogLLonDayDateButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_bgt_freq"
                android:gravity="start"
                android:layout_weight="0.2"
                />
            <Button
                android:id="@+id/bgtDialogBNday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/dialog_bgt_freq_button_day"
                android:enabled="false"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/bgtDialogBNdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/dialog_bgt_freq_button_date"
                android:enabled="false"
                android:visibility="gone"
                />
        </LinearLayout>
    	<LinearLayout
	        android:id="@+id/bgtDialogLLfreq"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
			android:orientation="horizontal"        
	        >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:gravity="start"
		        android:text="@string/dialog_bgt_freq_every"
		        />
		    <EditText 
		        android:id="@+id/bgtDialogETfreq"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/largeMargin"
		        android:layout_gravity="center"
		        android:gravity="center"
		        android:maxLines="1"
		        android:inputType="numberDecimal"
		        android:maxLength="2"
		        />

		    <Spinner
		        android:id="@+id/bgtDialogSPfreqType"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:entries="@array/freqType"
		        android:gravity="center|center_vertical" />

		    </LinearLayout>
		<TextView
		    android:id="@+id/bgtDialogTVon"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="start"
		    android:text="@string/dialog_bgt_freq_on"
		    />
   		<Spinner
	        android:id="@+id/bgtDialogSPweekDay"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/freqWeekDay"
	        android:gravity="center"
	        android:visibility="gone"
	        />
		<LinearLayout
		    android:id="@+id/bgtDialogLLdateOfMonth"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    >
		    <TextView 
		        android:id="@+id/bgtDialogTVdateOfMonth"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:gravity="center"
		        android:text="@string/dialog_bgt_freq_date_of_month"
		        android:layout_marginEnd="@dimen/largeMargin"
		        android:visibility="gone"
		        />
	        <Spinner 
	            android:id="@+id/bgtDialogSPdateOfMonth"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:entries="@array/freqMonthDate"
	            android:visibility="gone"
	            />
        	</LinearLayout>
        <Spinner
             android:id="@+id/bgtDialogSPmonthDateBeforeAfter"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/freqMonthDateBeforeAfter"
	        android:gravity="center"
            android:visibility="gone"
            />
       	<LinearLayout
       	    android:id="@+id/bgtDialogLLdayOfMonth"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:orientation="vertical" 
       	    >
          	<Spinner
		        android:id="@+id/bgtDialogSPmonthWeek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/freqMonthWeekDay"
		        android:gravity="center"
		        android:visibility="gone"
		        />
	    	<Spinner
		        android:id="@+id/bgtDialogSPmonthWeekDay"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/freqWeekDay"
		        android:gravity="center"
		        android:visibility="gone"
		        />
       	    </LinearLayout>

       	<LinearLayout
       	    android:id="@+id/bgtDialogLLdateOfYear"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:orientation="horizontal" 
       	    >
	    	<TextView 
	    	    android:id="@+id/bgtDialogTVyearMonthDate"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_gravity="center"
	    	    android:gravity="center"
	    	    android:text="@string/dialog_bgt_freq_on_year_date"
	    	    android:visibility="gone"
	    	    />
	    	<Spinner
		        android:id="@+id/bgtDialogSPyearMonthDate"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/freqMonthDate"
		        android:layout_gravity="center"
		        android:gravity="center"
		        android:visibility="gone"
		        />
    		</LinearLayout>
    	<TextView
    	    android:id="@+id/bgtDialogTVonYearMonth"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/dialog_bgt_freq_off"
    	    />
   		<Spinner
	        android:id="@+id/bgtDialogSPonYearMonth"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/freqYearMonth"
	        android:gravity="center"
	        />
   	</LinearLayout>
</RelativeLayout>